--- a/FiscaliZi.Colinfo/Assets/Dialog_TotaisVenda.xaml
+++ b/FiscaliZi.Colinfo/Assets/Dialog_TotaisVenda.xaml
@@ -1,10 +1,12 @@
-﻿<UserControl x:Name="userControl" x:Class="FiscaliZi.Colinfo.Assets.FlyTotaisVenda"
+﻿<UserControl x:Name="userControl" x:Class="FiscaliZi.Colinfo.Assets.Dialog_TotaisVenda"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FiscaliZi.Colinfo.Assets"
              xmlns:Model="clr-namespace:FiscaliZi.Colinfo.Model"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -15,63 +17,71 @@
     </UserControl.Resources>
 
     <Grid>
-        <StackPanel 
-            Orientation="Vertical"
-            TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
-            Margin="5">
-            <DataGrid x:Name="dgTotaisVenda"
-                      ItemsSource="{Binding DataContext, Converter={StaticResource TotalVendasConverter}, ElementName=userControl}"
-                      AutoGenerateColumns="False"
-                      CanUserAddRows="False" 
-                      CanUserResizeColumns="False" 
-                      CanUserReorderColumns="False" 
-                      CanUserDeleteRows="False" 
-                      CanUserResizeRows="False" 
-                      IsReadOnly="True" 
-                      HeadersVisibility="Column"
-                      IsSynchronizedWithCurrentItem="True" 
-                      Style="{DynamicResource DatagridCustomMDesign}" 
-                      CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                      RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                      ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
-                      SelectionMode="Single" VerticalAlignment="Top">
-                <DataGrid.Columns>
-                    <DataGridTextColumn 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <DataGrid 
+            x:Name="dgTotaisVenda"
+            ItemsSource="{Binding DataContext, Converter={StaticResource TotalVendasConverter}, ElementName=userControl}"
+            Grid.Row="0"
+            AutoGenerateColumns="False"
+            CanUserAddRows="False" 
+            CanUserResizeColumns="False" 
+            CanUserReorderColumns="False" 
+            CanUserDeleteRows="False" 
+            CanUserResizeRows="False" 
+            IsReadOnly="True" 
+            HeadersVisibility="Column"
+            IsSynchronizedWithCurrentItem="True" 
+            Style="{DynamicResource DatagridCustomMDesign}" 
+            CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+            RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+            ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+            SelectionMode="Single" VerticalAlignment="Top">
+            <DataGrid.Columns>
+                <DataGridTextColumn 
                         Header="PRODUTO"
                         Binding="{Binding Produto.Codigo}" 
                         CanUserResize="False" />
-                    <DataGridTextColumn 
+                <DataGridTextColumn 
                         Header="DESCRICAO" 
                         Binding="{Binding Produto.Descricao}" 
                         CanUserResize="False" />
-                    <DataGridTextColumn 
+                <DataGridTextColumn 
                         Header="CX" 
                         Binding="{Binding QntCX}" 
                         CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                         CanUserResize="False" />
-                    <DataGridTextColumn 
+                <DataGridTextColumn 
                         Header="UND" 
                         Binding="{Binding QntUND}" 
                         CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                         CanUserResize="False" />
-                    <DataGridTextColumn 
+                <DataGridTextColumn 
                         Header="V. TOTAL" 
                         Binding="{Binding ValorTotal, StringFormat=\{0:N2\}}" 
                         CanUserResize="False" />
-                </DataGrid.Columns>
-            </DataGrid>
-            <StackPanel
-                Margin="0,0,0,5" 
-                Orientation="Horizontal">
-                <Border 
+            </DataGrid.Columns>
+        </DataGrid>
+        <Separator
+            Grid.Row="1"
+            Style="{StaticResource MaterialDesignDarkSeparator}" 
+            Margin="0,5"/>
+        <StackPanel
+            Grid.Row="2"
+            Margin="0,0,0,5" 
+            Orientation="Horizontal">
+            <Border 
                     Background="{DynamicResource AccentColorBrush3}" 
                     CornerRadius="5" 
                     HorizontalAlignment="Left" 
                     Height="20" 
                     Margin="0,10,0,0">
-                    <StackPanel 
+                <StackPanel 
                         Orientation="Horizontal">
-                        <TextBlock 
+                    <TextBlock 
                             Text="VAL. TOT" 
                             Foreground="{DynamicResource AccentColorBrush}"
                             FontSize="10" 
@@ -79,13 +89,13 @@
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center"
                             FontWeight="Bold"/>
-                        <Separator
+                    <Separator
                             Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"
                             Height="10" 
                             Width="1" 
                             Margin="3,2" 
                             Background="#FF686868"/>
-                        <TextBlock 
+                    <TextBlock 
                             Text="{Binding Pedidos, Converter={StaticResource TotalValPedsConverter}}" 
                             Foreground="{DynamicResource AccentColorBrush}"
                             FontSize="10" 
@@ -93,17 +103,17 @@
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center" 
                             FontWeight="Bold"/>
-                    </StackPanel>
-                </Border>
-                <Border 
+                </StackPanel>
+            </Border>
+            <Border 
                     Background="{DynamicResource AccentColorBrush3}" 
                     CornerRadius="5" 
                     HorizontalAlignment="Left" 
                     Height="20" 
                     Margin="10,10,0,0">
-                    <StackPanel 
+                <StackPanel 
                         Orientation="Horizontal">
-                        <TextBlock 
+                    <TextBlock 
                             Text="PESO" 
                             Foreground="{DynamicResource AccentColorBrush}"
                             FontSize="10" 
@@ -111,13 +121,13 @@
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center"
                             FontWeight="Bold"/>
-                        <Separator
+                    <Separator
                             Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"
                             Height="10" 
                             Width="1" 
                             Margin="3,2" 
                             Background="#FF686868"/>
-                        <TextBlock 
+                    <TextBlock 
                             Text="{Binding Pedidos, Converter={StaticResource TotalPesoPedsConverter}}"
                             Foreground="{DynamicResource AccentColorBrush}"
                             FontSize="10" 
@@ -125,9 +135,27 @@
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Center" 
                             FontWeight="Bold"/>
-                    </StackPanel>
-                </Border>
-            </StackPanel>
+                </StackPanel>
+            </Border>
+            <Border 
+                    Background="{DynamicResource AccentColorBrush3}" 
+                    CornerRadius="5" 
+                    HorizontalAlignment="Left" 
+                    Height="20" 
+                    Margin="40,10,0,0">
+                <Button 
+                            IsDefault="True" 
+                            Style="{DynamicResource MaterialDesignFlatButton}"
+                            Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}" 
+                            Background="#FF9BA29F" 
+                            Height="27" 
+                            FontSize="12">
+                    <Button.CommandParameter>
+                        <sys:Boolean>True</sys:Boolean>
+                    </Button.CommandParameter>
+                    OK
+                </Button>
+            </Border>
         </StackPanel>
     </Grid>
 
