--- a/FiscaliZi.Colinfo/Assets/EntradaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/EntradaView.xaml
@@ -35,12 +35,15 @@
     <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <MDesign:Card 
             Grid.Column="0" 
             BorderThickness="3"
-            MinHeight="700" MinWidth="399">
+            UniformCornerRadius="0" 
+            Margin="3,2,0,3"
+            Height="auto" 
+            VerticalAlignment="Stretch">
             <Grid x:Name="grdVendedores">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -51,11 +54,12 @@
                     Grid.Row="0" 
                     Orientation="Horizontal" 
                     Margin="10,0">
-                    <TextBlock x:Name="datPedidos" 
-                               Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat={}{0:D}}"
-                                Language="pt-BR" 
-                                HorizontalAlignment="Left" 
-                                Margin="0,10,0,5" FontWeight="Bold" FontFamily="Sitka Display" FontSize="14"/>
+                    <TextBlock 
+                        x:Name="datPedidos" 
+                        Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat={}{0:D}}"
+                        Language="pt-BR" 
+                        HorizontalAlignment="Left" 
+                        Margin="0,10,0,5" FontWeight="Bold" FontFamily="Sitka Display" FontSize="14"/>
                     <MDesign:PopupBox 
                         HorizontalAlignment="Right" 
                         Padding="2 0 2 0" 
@@ -75,7 +79,10 @@
                         </StackPanel>
                     </MDesign:PopupBox>
                 </StackPanel>
-                <Separator Grid.Row="1" Style="{StaticResource MaterialDesignDarkSeparator}" Margin="8 0 8 0"/>
+                <Separator 
+                    Grid.Row="1" 
+                    Style="{StaticResource MaterialDesignDarkSeparator}" 
+                    Margin="8 0 8 0"/>
                 <ListBox 
                     x:Name="Arquivos" 
                     ItemsSource="{Binding Arquivos}"
@@ -88,9 +95,11 @@
                         <StaticResource ResourceKey="CustomMaterialDesignListBox"/>
                     </ListBox.Style>
                     <ListBox.ItemTemplate>
-                        <DataTemplate x:Name="dtArquivos">
+                        <DataTemplate 
+                            x:Name="dtArquivos">
                             <Grid>
-                                <Grid Height="40">
+                                <Grid 
+                                    Height="40">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="32"/>
                                         <ColumnDefinition Width="104"/>
@@ -104,10 +113,17 @@
                                     </Grid.RowDefinitions>
                                     <Rectangle 
                                         Fill="{StaticResource businessman}" 
-                                        Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                                        Grid.Column="0" 
+                                        Grid.Row="0" 
+                                        Grid.RowSpan="2"
                                         Margin="0,1"/>
                                     <TextBlock 
-                                        FontWeight="Bold" Grid.Column="1" Grid.Row="0" Width="Auto" Margin="3,3,0,0" FontSize="10.5" >
+                                        FontWeight="Bold" 
+                                        Grid.Column="1" 
+                                        Grid.Row="0" 
+                                        Width="Auto" 
+                                        Margin="3,3,0,0"
+                                        FontSize="10.5" >
                                         <TextBlock.Text>
                                             <MultiBinding StringFormat="{}{0} {1} {2}">
                                                 <Binding Path="CodVendedor" Converter="{StaticResource NullatorCodVendedorConverter}"/>
@@ -140,111 +156,120 @@
                 </ListBox>
             </Grid>
         </MDesign:Card>
-        <DataGrid x:Name="Pedidos"
-                  ItemsSource="{Binding Arquivos/Pedidos}"
-                  Grid.Column="1"
-                  AutoGenerateColumns="False" 
-                  CanUserAddRows="False" 
-                  CanUserResizeColumns="False" 
-                  CanUserReorderColumns="False" 
-                  CanUserDeleteRows="False" 
-                  CanUserResizeRows="False" 
-                  IsReadOnly="True" 
-                  HeadersVisibility="Column"
-                  IsSynchronizedWithCurrentItem="True" 
-                  Style="{DynamicResource DatagridCustomMDesign}" 
-                  CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                  RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                  ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
-                  Margin="10,0,0,0" SelectionUnit="CellOrRowHeader">
-            <DataGrid.Columns>
-                <DataGridTextColumn 
+        <MDesign:Card
+            Grid.Column="1" 
+            BorderThickness="3"
+            UniformCornerRadius="0" 
+            Margin="5,2,3,3"
+            Height="auto" 
+            Width="auto"
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch">
+            <DataGrid 
+                x:Name="Pedidos"
+                ItemsSource="{Binding Arquivos/Pedidos}"
+                AutoGenerateColumns="False" 
+                CanUserAddRows="False" 
+                CanUserResizeColumns="False" 
+                CanUserReorderColumns="False" 
+                CanUserDeleteRows="False" 
+                CanUserResizeRows="False" 
+                IsReadOnly="True" 
+                HeadersVisibility="Column"
+                IsSynchronizedWithCurrentItem="True" 
+                Style="{DynamicResource DatagridCustomMDesign}" 
+                CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                Margin="10,0,0,0" SelectionUnit="CellOrRowHeader" Background="{x:Null}">
+                <DataGrid.Columns>
+                    <DataGridTextColumn 
                     Header="ROTA" 
                     Binding="{Binding Cliente.Rota}"                                         
                     CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                     CanUserResize="False" />
-                <DataGridTextColumn 
+                    <DataGridTextColumn 
                     Header="VEND" 
                     Binding="{Binding CodVendedor}"                                         
                     CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                     CanUserResize="False" />
-                <DataGridTextColumn Header="CLIENTE" 
+                    <DataGridTextColumn Header="CLIENTE" 
                                         CanUserResize="False" 
                                         Width="70">
-                    <DataGridTextColumn.Binding>
-                        <MultiBinding StringFormat=" {0}-{1}">
-                            <Binding Path="Cliente.RegiaoCliente" />
-                            <Binding Path="Cliente.NumCliente" />
-                        </MultiBinding>
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="R. SOCIAL" Binding="{Binding Cliente.Razao}" CanUserResize="False" Width="200" />
-                <DataGridTextColumn Header="CNPJ" Binding="{Binding Cliente.CNPJ}"  CanUserResize="False" />
-                <DataGridTextColumn 
+                        <DataGridTextColumn.Binding>
+                            <MultiBinding StringFormat=" {0}-{1}">
+                                <Binding Path="Cliente.RegiaoCliente" />
+                                <Binding Path="Cliente.NumCliente" />
+                            </MultiBinding>
+                        </DataGridTextColumn.Binding>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="R. SOCIAL" Binding="{Binding Cliente.Razao}" CanUserResize="False" Width="200" />
+                    <DataGridTextColumn Header="CNPJ" Binding="{Binding Cliente.CNPJ}"  CanUserResize="False" />
+                    <DataGridTextColumn 
                     Header="INSCRIÇÃO" 
                     Binding="{Binding Cliente.IE}"  
                     CanUserResize="False" 
                     Width="120">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="Margin" Value="10,0,0,0" />
-                            <Style.Triggers>
-                                <Trigger Property="Text" Value="333647.589/0096">
-                                    <Setter Property="Foreground" Value="Red"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="VAL. PED" 
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="{x:Type TextBlock}">
+                                <Setter Property="Margin" Value="10,0,0,0" />
+                                <Style.Triggers>
+                                    <Trigger Property="Text" Value="333647.589/0096">
+                                        <Setter Property="Foreground" Value="Red"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="VAL. PED" 
                                     Binding="{Binding ValorTotalPed, Converter={StaticResource ToMoney}}" 
                                     CanUserResize="False" 
                                     Width="80" />
-                <DataGridTemplateColumn 
+                    <DataGridTemplateColumn 
                     x:Name="dataGridTemplateColumn" 
                     Header="SITUAÇÃO IE\CNPJ" 
                     CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <MDesign:PackIcon Kind="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJIconConverter}}" 
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <MDesign:PackIcon Kind="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJIconConverter}}" 
                                                          VerticalAlignment="Center" 
                                                          Foreground="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJColorConverter}}" 
                                                          Margin="0,0,5,0"/>
-                                <TextBlock 
+                                    <TextBlock 
                                     x:Name="txtSituacao" 
                                     VerticalAlignment="Center" 
                                     Width="63">
-                                    <TextBlock.Text>
-                                        <MultiBinding Converter="{StaticResource SitCadastroClienteConverter}" >
-                                            <Binding Path="Cliente.RetConsultaCadastro"/>
-                                            <Binding Path="Cliente.CNPJ"/>
-                                            <Binding Path="Cliente.IE"/>
-                                        </MultiBinding>
-                                    </TextBlock.Text>
-                                </TextBlock>
-                                <Button 
+                                        <TextBlock.Text>
+                                            <MultiBinding Converter="{StaticResource SitCadastroClienteConverter}" >
+                                                <Binding Path="Cliente.RetConsultaCadastro"/>
+                                                <Binding Path="Cliente.CNPJ"/>
+                                                <Binding Path="Cliente.IE"/>
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
+                                    <Button 
                                     cal:Message.Attach="ShowConsulta($this)"
                                     Style="{DynamicResource MaterialDesignToolButton}"
                                     IsEnabled="{Binding Cliente.RetConsultaCadastro, Converter={StaticResource ShowConsultaConverter}}"
                                     Height="25" Width="40">
-                                    <MDesign:PackIcon x:Name="icoDetalhe" Kind="ClipboardText" HorizontalAlignment="Center" />
-                                </Button>
-                                <Button 
+                                        <MDesign:PackIcon x:Name="icoDetalhe" Kind="ClipboardText" HorizontalAlignment="Center" />
+                                    </Button>
+                                    <Button 
                                     cal:Message.Attach="ConsultaCadastro($this)"
                                     Style="{DynamicResource MaterialDesignToolButton}"
                                     IsEnabled="{Binding Cliente.CNPJ, Converter={StaticResource IsCnpjConverter}}"
                                     Height="25" Width="40">
-                                    <MDesign:PackIcon x:Name="icoRefresh" Kind="Refresh" HorizontalAlignment="Center" />
-                                </Button>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn >
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button 
+                                        <MDesign:PackIcon x:Name="icoRefresh" Kind="Refresh" HorizontalAlignment="Center" />
+                                    </Button>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn >
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button 
                                 Content="ITENS" 
                                 cal:Message.Attach="ShowPedidoFlyout($this)"
                                 Height="19" 
@@ -255,11 +280,13 @@
                                 Grid.IsSharedSizeScope="True" 
                                 Padding="0,0,0,1" 
                                 FontWeight="Normal" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </MDesign:Card>
+        
         <MDesign:Snackbar MessageQueue="{Binding SnackbarMQ}" Grid.ColumnSpan="2"/>
     </Grid>
     
