--- a/FiscaliZi.Colinfo/Assets/EntradaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/EntradaView.xaml
@@ -17,7 +17,7 @@
     cal:Bind.AtDesignTime="True">
 
     <UserControl.Resources>
-        <Model:TotalValPedsConverter x:Key="TotalValPedsConverter" />
+        <Model:TotalValPedsEntradaConverter x:Key="TotalValPedsEntradaConverter" />
         <Model:IsCNPJConverter x:Key="IsCnpjConverter"/>
         <Model:SitCadastroClienteConverter x:Key="SitCadastroClienteConverter" />
         <Model:RotaConverter x:Key="RotaConverter" />
@@ -136,7 +136,7 @@
                                     <TextBlock Grid.Column="2" Grid.Row="0" Margin="5,3,0,0" Height="Auto" Width="Auto" FontSize="10.5" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"><Run Text="PED: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos.Count, Mode=OneWay}"/></TextBlock>
                                     <TextBlock Grid.Column="2" Grid.Row="1" Margin="5,1,0,5.033" Width="Auto" FontSize="10.5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ><Run Text="PES: " FontWeight="Bold"/><Run Text=" "/><Run Text="000.000,00"/></TextBlock>
                                     <TextBlock Grid.Column="3" Grid.Row="0" Margin="5,3,0,1" FontSize="10.5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"><Run Text="ENV: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding DataEnvio, StringFormat=\{0:dd/MM hh:mm:ss\}}"/></TextBlock>
-                                    <TextBlock Grid.Column="3" Grid.Row="1" Margin="5,1,0,3" FontSize="10.5" HorizontalAlignment="Stretch" Width="Auto"><Run Text="VAL: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos, Converter={StaticResource TotalValPedsConverter}}"/></TextBlock>
+                                    <TextBlock Grid.Column="3" Grid.Row="1" Margin="5,1,0,3" FontSize="10.5" HorizontalAlignment="Stretch" Width="Auto"><Run Text="VAL: " FontWeight="Bold"/><Run Text=" "/><Run Text="{Binding Pedidos, Converter={StaticResource TotalValPedsEntradaConverter}}"/></TextBlock>
                                     <StackPanel Grid.Column="4" Grid.Row="0" Grid.RowSpan="2" Orientation="Vertical">
                                         <Button HorizontalAlignment="Right" Width="Auto" Padding="2 0 2 0"
                                                 MDesign:RippleAssist.IsCentered="True"
